force-app/main/default/objects/Leave_Request__c/fields/Calendar_Update_Process__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Update_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calendar Update Process</label>
    <type>Checkbox</type>
</CustomField>