force-app/main/default/objects/Leave_Request__c/fields/Child_Age__c.field-meta.xml
<CustomField>
    <fullName>Child_Age__c</fullName>
    <label>Child Age (In years)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>