force-app/main/default/objects/Leave_Request__c/fields/Child_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Name__c</fullName>
    <label>Child Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>