force-app/main/default/objects/Leave_Request__c/fields/Child_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Child_Nationality__c</fullName>
    <label>Child Nationality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Singapore</fullName>
            </value>
            <value>
                <fullName>Non-Singapore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>