force-app/main/default/objects/Leave_Request__c/fields/Child_Number__c.field-meta.xml
<CustomField>
    <fullName>Child_Number__c</fullName>
    <label>Child Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First</fullName>
            </value>
            <value>
                <fullName>Second</fullName>
            </value>
            <value>
                <fullName>Third</fullName>
            </value>
            <value>
                <fullName>Subsequent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>