force-app/main/default/objects/Leave_Request__c/fields/Date_Difference__c.field-meta.xml
<CustomField>
    <fullName>Date_Difference__c</fullName>
    <description>It is for portal and don&apos;t put it on payout.</description>
    <formula>(Leave_End_Date__c  -  Leave_Start_Date__c)+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>It is only for portal use.</inlineHelpText>
    <label>Date Difference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>