force-app/main/default/objects/Leave_Request__c/fields/Employee_Recordtype__c.field-meta.xml
<CustomField>
    <fullName>Employee_Recordtype__c</fullName>
    <formula>Employee__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Recordtype</label>
    <type>Text</type>
</CustomField>