force-app/main/default/objects/Leave_Request__c/fields/Expected_Date_of_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date_of_Delivery__c</fullName>
    <label>Expected Date of Delivery</label>
    <type>Date</type>
</CustomField>