force-app/main/default/objects/Leave_Request__c/fields/Leave_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Leave_Start_Date__c</fullName>
    <label>Leave Start Date</label>
    <type>Date</type>
</CustomField>