force-app/main/default/objects/Leave_Request__c/fields/Leave_Start_Day__c.field-meta.xml
<CustomField>
    <fullName>Leave_Start_Day__c</fullName>
    <description>Shows the weekday as per the Leave Start Date.</description>
    <formula>IF(WEEKDAY(Leave_Start_Date__c) == 1, &apos;Sunday&apos;, IF(WEEKDAY(Leave_Start_Date__c) == 2, &apos;Monday&apos;, IF(WEEKDAY(Leave_Start_Date__c) == 3, &apos;Tuesday&apos;, IF(WEEKDAY(Leave_Start_Date__c) == 4, &apos;Wednesday&apos;, IF(WEEKDAY(Leave_Start_Date__c) == 5, &apos;Thursday&apos;, IF(WEEKDAY(Leave_Start_Date__c) == 6, &apos;Friday&apos;, IF(WEEKDAY(Leave_Start_Date__c) == 7, &apos;Saturday&apos;, &apos;&apos;) ) ) ) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leave Start Day</label>
    <type>Text</type>
</CustomField>