force-app/main/default/objects/Leave_Request__c/fields/Locationddddd__c.field-meta.xml
<CustomField>
    <fullName>Locationddddd__c</fullName>
    <label>Location-Sharingddd</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>