force-app/main/default/objects/Leave_Request__c/fields/MC_Submitted__c.field-meta.xml
<CustomField>
    <fullName>MC_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MC Submitted</label>
    <type>Checkbox</type>
</CustomField>