force-app/main/default/objects/Leave_Request__c/fields/No_of_Weeks__c.field-meta.xml
<CustomField>
    <fullName>No_of_Weeks__c</fullName>
    <label>No. of Weeks</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>16</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>