force-app/main/default/objects/Leave_Request__c/fields/Organisation_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Sharing__c</fullName>
    <label>Organisation Sharing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Organisations_Name</valueSetName>
    </valueSet>
</CustomField>