force-app/main/default/objects/Leave_Request__c/fields/Paid_Leaves__c.field-meta.xml
<CustomField>
    <fullName>Paid_Leaves__c</fullName>
    <label># Paid Leaves</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>