force-app/main/default/objects/Leave_Request__c/fields/PayItem__c.field-meta.xml
<CustomField>
    <fullName>PayItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PayItem</label>
    <referenceTo>PayItem__c</referenceTo>
    <relationshipLabel>Leave Requests</relationshipLabel>
    <relationshipName>Leave_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>