force-app/main/default/objects/Leave_Request__c/fields/Reporting_Manager_2__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporting Manager 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LeaveRequestReportingManager</relationshipName>
    <type>Lookup</type>
</CustomField>