force-app/main/default/objects/Leave_Request__c/fields/Reporting_Manager__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to assign approver, gets value from Employee&apos;s Reporting Manager field, if it&apos;s blank then will contain HR user.</description>
    <label>Reporting Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leave_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>