force-app/main/default/objects/Leave_Request__c/fields/Sick_leave_start_Time__c.field-meta.xml
<CustomField>
    <fullName>Sick_leave_start_Time__c</fullName>
    <label>Sick leave start Time</label>
    <type>Time</type>
</CustomField>