force-app/main/default/objects/Leave_Request__c/fields/submit_for_approval_for_portal__c.field-meta.xml
<CustomField>
    <fullName>submit_for_approval_for_portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit For Approval From Portal</label>
    <type>Checkbox</type>
</CustomField>