force-app/main/default/objects/Leave_Request__c/fields/Total_Leaves_Applied__c.field-meta.xml
<CustomField>
    <fullName>Total_Leaves_Applied__c</fullName>
    <formula>Leave_End_Date__c  -  Leave_Start_Date__c +1</formula>
    <label>Total Leaves Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>