force-app/main/default/objects/Leave_Request__c/fields/Unpaid_Leaves__c.field-meta.xml
<CustomField>
    <fullName>Unpaid_Leaves__c</fullName>
    <label># Unpaid Leaves</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>