force-app/main/default/objects/Leave_Request__c/recordTypes/Child_Care_Leave.recordType-meta.xml
<RecordType>
    <fullName>Child_Care_Leave</fullName>
    <active>true</active>
    <label>Child Care Leave</label>
</RecordType>