force-app/main/default/objects/Leave_Request__c/recordTypes/Extended_Child_Care_Leave.recordType-meta.xml
<RecordType>
    <fullName>Extended_Child_Care_Leave</fullName>
    <active>true</active>
    <label>Extended Child Care Leave</label>
</RecordType>