force-app/main/default/objects/Leave_Request__c/recordTypes/Maternity_Leave.recordType-meta.xml
<RecordType>
    <fullName>Maternity_Leave</fullName>
    <active>true</active>
    <label>Maternity Leave</label>
</RecordType>