force-app/main/default/objects/Leave_Request__c/recordTypes/NSMen_Leave.recordType-meta.xml
<RecordType>
    <fullName>NSMen_Leave</fullName>
    <active>true</active>
    <label>NSMen Leave</label>
</RecordType>