force-app/main/default/objects/Leave_Request__c/recordTypes/Other_Leave.recordType-meta.xml
<RecordType>
    <fullName>Other_Leave</fullName>
    <active>true</active>
    <label>Other Leave</label>
</RecordType>