force-app/main/default/objects/Leave_Request__c/recordTypes/Paid_Leave.recordType-meta.xml
<RecordType>
    <fullName>Paid_Leave</fullName>
    <active>true</active>
    <label>Paid Leave</label>
</RecordType>