force-app/main/default/objects/Leave_Request__c/validationRules/CCL_child_must_be_less_than_7.validationRule-meta.xml
<ValidationRule>
    <fullName>CCL_child_must_be_less_than_7</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName == &apos;Child_Care_Leave&apos; &amp;&amp; Child_Age__c &gt; 7</errorConditionFormula>
    <errorMessage>Child Age must be less than 7 years.</errorMessage>
</ValidationRule>