force-app/main/default/objects/Leave_Request__c/validationRules/ECL_and_CCL_child_must_be_Singaporean.validationRule-meta.xml
<ValidationRule>
    <fullName>ECL_and_CCL_child_must_be_Singaporean</fullName>
    <active>true</active>
    <description>CCL &amp; ECL child nationality to be Singapore.</description>
    <errorConditionFormula>(RecordType.DeveloperName == &apos;Child_Care_Leave&apos; || RecordType.DeveloperName == &apos;Extended_Child_Care_Leave&apos;) &amp;&amp; (ISPICKVAL(Child_Nationality__c , &quot;Non-Singapore&quot;) || ISPICKVAL(Child_Nationality__c , &quot;&quot;))</errorConditionFormula>
    <errorMessage>Child Nationality cannot be left blank and must be Singapore.</errorMessage>
</ValidationRule>