force-app/main/default/objects/Leave_Request__c/validationRules/ECL_and_CCL_child_name_required.validationRule-meta.xml
<ValidationRule>
    <fullName>ECL_and_CCL_child_name_required</fullName>
    <active>true</active>
    <description>CCL &amp; ECL child name is mandatory.</description>
    <errorConditionFormula>(RecordType.DeveloperName == &apos;Child_Care_Leave&apos; || RecordType.DeveloperName == &apos;Extended_Child_Care_Leave&apos;) &amp;&amp; ISBLANK(Child_Name__c)</errorConditionFormula>
    <errorMessage>Child name cannot be left blank.</errorMessage>
</ValidationRule>