force-app/main/default/objects/Leave_Request__c/validationRules/ECL_and_CCL_only_HR_can_create.validationRule-meta.xml
<ValidationRule>
    <fullName>ECL_and_CCL_only_HR_can_create</fullName>
    <active>false</active>
    <errorConditionFormula>(RecordType.DeveloperName == &apos;Child_Care_Leave&apos; || RecordType.DeveloperName == &apos;Extended_Child_Care_Leave&apos;) &amp;&amp; $Profile.Name != &apos;HR Manager&apos; &amp;&amp; $Profile.Name != &apos;System Administrator&apos; &amp;&amp; !($Permission.Operation_User)</errorConditionFormula>
    <errorMessage>You&apos;re not eligible to apply for leave. Please contact your HR.</errorMessage>
</ValidationRule>