force-app/main/default/objects/Leave_Request__c/validationRules/Start_date_cannot_be_less_than_today.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_date_cannot_be_less_than_today</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Profile.Name!=&apos;System Administrator&apos;,
!($Permission.Operation_User), OR(ISNEW(),ISCHANGED(Leave_Start_Date__c)), NOT(IsBlank(Leave_Start_Date__c)) ,Leave_Start_Date__c &lt; TODAY())</errorConditionFormula>
    <errorMessage>Leave start date cannot be less than today</errorMessage>
</ValidationRule>