force-app/main/default/objects/Leave_Request__c/validationRules/Start_Date_End_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_End_Date_Validation</fullName>
    <active>true</active>
    <description>Restrict user to create record with Start Date greater than End Date.</description>
    <errorConditionFormula>Leave_Start_Date__c  &gt; Leave_End_Date__c</errorConditionFormula>
    <errorMessage>Start Date cannot be greater than End Date.</errorMessage>
</ValidationRule>