force-app/main/default/objects/Leave_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Leave_Start_Date__c</columns>
    <columns>Leave_Start_Day__c</columns>
    <columns>Leave_End_Date__c</columns>
    <columns>Leave_End_Day__c</columns>
    <columns>Paid_Leaves__c</columns>
    <columns>Unpaid_Leaves__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>