force-app/main/default/objects/Leave_Request__c/listViews/HR_Queue_Leave_Request.listView-meta.xml
<ListView>
    <fullName>HR_Queue_Leave_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>HR Queue</label>
    <queue>HR_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>