force-app/main/default/objects/Leave_Request__c/listViews/Paid_leave_Request.listView-meta.xml
<ListView>
    <fullName>Paid_leave_Request</fullName>
    <columns>NAME</columns>
    <columns>Employee_Recordtype__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Leave_Request__c.Paid_Leave</value>
    </filters>
    <label>Paid leave Request</label>
</ListView>