force-app/main/default/objects/Leave_Request__c/listViews/RejectedLeave_Request.listView-meta.xml
<ListView>
    <fullName>RejectedLeave_Request</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Leave_Start_Date__c</columns>
    <columns>Leave_Start_Day__c</columns>
    <columns>Leave_End_Date__c</columns>
    <columns>Leave_End_Day__c</columns>
    <columns>Paid_Leaves__c</columns>
    <columns>Unpaid_Leaves__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>Rejected Leave Request</label>
</ListView>